// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipeListPage in [page].tsx when there is content it renders the page 1`] = `
<DocumentFragment>
  <title>
    Index Default Title (Page 1)
  </title>
  <meta
    content="Index default description."
    name="description"
  />
  <script
    data-testid="recipe-list-schema"
    id="recipe-list-schema"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"ItemList","name":"Index Default Title (Page 1)","description":"Index default description.","url":"https://test.recipes.pliddy.com","numberOfItems":2,"itemListElement":[{"@type":"ListItem","position":1,"name":"Title 1","url":"https://test.recipes.pliddy.com/recipe/title-1"},{"@type":"ListItem","position":2,"name":"Title 2","url":"https://test.recipes.pliddy.com/recipe/title-2"}]}
  </script>
</DocumentFragment>
`;

exports[`RecipeListPage in [page].tsx when there is no page parameter it renders the page 1`] = `
<DocumentFragment>
  <title>
    Index Default Title (Page undefined)
  </title>
  <meta
    content="Index default description."
    name="description"
  />
  <script
    data-testid="recipe-list-schema"
    id="recipe-list-schema"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"ItemList","name":"Index Default Title (Page undefined)","description":"Index default description.","url":"https://test.recipes.pliddy.com","numberOfItems":2,"itemListElement":[{"@type":"ListItem","position":1,"name":"Title 1","url":"https://test.recipes.pliddy.com/recipe/title-1"},{"@type":"ListItem","position":2,"name":"Title 2","url":"https://test.recipes.pliddy.com/recipe/title-2"}]}
  </script>
</DocumentFragment>
`;
